# williott

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  input.css  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: a969fbf43598_species_and_pokemon_models.py  afc34ae2dfca_add_pokemon_models.py  eb0f19fa7686_add_pokemon_models.py
scripts/: prestart.sh
williott/: components.py  constants.py  data_entry.py  database.py  dependencies.py  html_utils.py  main.py  models.py  prestart.py  settings.py  svgs.py
williott/hiragana/: database.py  dependencies.py  router.py
williott/hiragana/views/: game.py  index.py
williott/pokedex/: dependencies.py  router.py
williott/pokedex/static/: pokedex.css
williott/pokedex/templates/: base.jinja2  index.jinja2  pokemon.jinja2
williott/pokedex/views/: base.py  cards.py  common.py  generations.py  index.py  pokemon.py  species.py
williott/pokemon/: constants.py  dependencies.py  models.py
williott/pokemon_db/: data_churner.py  db.py  pokedex.json  pokedex_input.json
williott/speak/: dependencies.py  router.py
williott/static/: auto_playback.js  manifest.json  test.py  williott.css
williott/static/css/: williott.css
williott/static/javascript/: audio_event_attacher.js
williott/templates/: base.jinja2  index.jinja2
williott/views/: base.py  index.py
williott/which_one/: router.py
williott/which_one/static/: which_one.css
williott/which_one/templates/: base.jinja2  game.jinja2  index.jinja2
williott/whos_that_pokemon/: router.py
(+8 files in other folders)
