[tool.poetry]
name = "williott"
version = "0.1.0"
description = ""
authors = ["Thomas Borgen <thomasborgen91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
google-cloud-texttospeech = "^2.16.1"
hypermedia = "^2.1.1"
sqlmodel = "^0.0.19"
alembic = "^1.13.1"
pydantic-settings = "^2.3.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
types-requests = "^2.32.0.20240602"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
